add css and html tweaks

--- a/index.html
+++ b/index.html
@@ -24,14 +24,23 @@
          </nav>
      </header>
      <section id="about-me" class="bio">
-        <h2>About Me</h2>
-        <img src="./assets/images/me1.jpg" alt="a picture of me with my dog, Leo." />
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur maxime accusamus reiciendis praesentium. Expedita saepe facere adipisci non architecto accusamus rem illum atque, aspernatur at reiciendis distinctio rerum porro qui.
-        </p>
+        <div class="flex-row">
+            <h2>About Me</h2>
+        </div>
+        <div class="bio-img">
+            <img src="./assets/images/me1.jpg" alt="a picture of me with my dog, Leo." />
+        </div>
+        <div class="bio-info">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur maxime accusamus reiciendis praesentium. Expedita saepe facere adipisci non architecto accusamus rem illum atque, aspernatur at reiciendis distinctio rerum porro qui.
+            </p>
+        </div>
+        
      </section>
      <section id="work" class="projects">
-         <h2>Work</h2>
+         <div class="flex-row">
+            <h2>Work</h2>
+         </div>
             <div class="main-work">
                 <h3>Run Buddy</h3>
                 <img src="./assets/images/run-buddy-site.JPG" alt="an image of the Run Buddy site that I built" />
@@ -48,7 +57,9 @@
             </div>
      </section>
      <section id="contact" class="contact-info">
-         <h2>Contact</h2>
+         <div class="flex-row">
+            <h2>Contact</h2>
+         </div>
          <p>
             Phone: <tel>952-250-8697</tel>
          </p>
@@ -56,13 +67,13 @@
              Email: <a href="mailto:mark.grangaard@gmail.com">mark.grangaard@gmail.com</a>
          </p>
          <address>
-             120 Hennepin Ave #306
+             120 Hennepin Ave #306 </br>
              Minneapolis, MN 55401
          </address>
 
      </section>
      <footer>
-         <h2>Made by Mark Grangaard</h2>
+         <h2>Made by Mark Grangaard &copy 2022</h2>
         
      </footer>
  </body>
